modified : index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#About">About</a></li>
                 <li><a href="#Education">Education</a></li>
                 <li><a href="#skill">Skills</a></li>
-                <li><a href="#Resume">Resume / CV</a></li>
+                <li><a href="#Material">Material</a></li>
               </ul>
         </div>
         <div class="scrolling-text-container">
@@ -29,7 +29,7 @@
         </div>
         <div class="About" id="About">
             <h2>About</h2>
-            <p>II am a high school graduate majoring in computer and network engineering, currently I am studying and working, as someone who blends technology I really like new things in today's era. I have a strong motivation, have a leadership spirit, honest, responsible, and can communicate well.</p>
+            <p>I am a high school graduate majoring in computer and network engineering, currently I am studying and working, as someone who blends technology I really like new things in today's era. I have a strong motivation, have a leadership spirit, honest, responsible, and can communicate well.</p>
         </div>
         <div class="Education" id="Education">
             <h2>Education</h2>
@@ -46,9 +46,10 @@
             <p>Office Skill</p><br>
             <p>Network Engineer Skill</p>
         </div>
-        <div class="Resume" id="Resume">
-            <h2>Resume/CV</h2>
-            <button><a href="../A MUHAMMAD FAUZAN/CURICULUM VITAE/CV Muhammad.pdf" class="download-button">Download My CV</a></button>
+        <div class="Material" id="Material">
+            <h2>Material</h2>
+            <h3>Artificial Intelligence</h3>
+            <p>Artificial intelligence (AI) is a simulation of human intelligence that is modeled in machines and programmed to think like humans. Meanwhile, according to Mc Leod and Schell, artificial intelligence is the activity of providing machines such as computers with the ability to display behavior that is considered as intelligent as if the ability was displayed by humans.</p>
         </div>
         <div class="contact-email">
             <h3>Contact Us</h3>
