--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#About">About</a></li>
                 <li><a href="#Education">Education</a></li>
                 <li><a href="#skill">Skills</a></li>
-                <li><a href="#Resume">Resume / CV</a></li>
+                <li><a href="#material">Material</a></li>
               </ul>
         </div>
         <div class="scrolling-text-container">
@@ -46,9 +46,10 @@
             <p>Office Skill</p><br>
             <p>Network Engineer Skill</p>
         </div>
-        <div class="Resume" id="Resume">
-            <h2>Resume/CV</h2>
-            <button><a href="../A MUHAMMAD FAUZAN/CURICULUM VITAE/CV Muhammad.pdf" class="download-button">Download My CV</a></button>
+        <div class="Material" id="material">
+            <h2>Material</h2>
+            <h3>Artificial Intelligence</h3>
+            <p>Artificial intelligence (AI) is a simulation of human intelligence that is modeled in machines and programmed to think like humans. Meanwhile, according to Mc Leod and Schell, artificial intelligence is the activity of providing machines such as computers with the ability to display behavior that is considered as intelligent as if the ability was displayed by humans.</p>
         </div>
         <div class="contact-email">
             <h3>Contact Us</h3>
