--- a/index.html
+++ b/index.html
@@ -10,23 +10,19 @@
 <body>
     <div class="container">
         <div class="profil">
-            <img src="img/me4.jpg" alt="Profil Photo"   >
+            <img src="img/IMG_20230319_014556_017.jpg" alt="Profil Photo"   >
             <h1>Muhammad Fauzan Syahdan</h1>
-            <p>Student of pamulang university</p>
+            <p>IT SUPPORT</p>
         </div>
         <div class="navigasi">
             <ul>
                 <li><a href="#About">About</a></li>
                 <li><a href="#Education">Education</a></li>
                 <li><a href="#skill">Skills</a></li>
-                <li><a href="#material">Material</a></li>
+                <li><a href="#contact">Contact</a></li>
               </ul>
         </div>
-        <div class="scrolling-text-container">
-            <div class="scrolling-text">
-                <p>Welcome to My Website</p>
-            </div>
-        </div>
+        
         <div class="About" id="About">
             <h2>About</h2>
             <p>II am a high school graduate majoring in computer and network engineering, currently I am studying and working, as someone who blends technology I really like new things in today's era. I have a strong motivation, have a leadership spirit, honest, responsible, and can communicate well.</p>
@@ -35,7 +31,7 @@
             <h2>Education</h2>
             <p>SMK PGRI 31 LEGOK</p><br>
             <p>I graduated in 2022 at this school. I learned a lot about networking, such as CISCO, Mikrotik, Linux, Windows Server, Office 365. I am also the former student council president for 2020 - 2021. I also received an achievement scholarship with the highest score in all my major classes. computer and network engineering from 2020 - 2022 the scholarship is in the form of free money per semester, for my final grade of 3.6 GPA / 86.</p><br><br>
-            <p>Pamulang university</p>
+            <p>PAMULANG UNIVERSITY</p>
             <p>I entered Pamulang University in 2022 and until now I am still an active student at Pamulang, I majored in informatics engineering and continued in the IT world, I really like being on this campus with active lecturers, good students and many things that I really like and things what I don't know yet, I'm very excited for it.</p>
         </div>
         <div class="skill" id="skill">
@@ -46,12 +42,8 @@
             <p>Office Skill</p><br>
             <p>Network Engineer Skill</p>
         </div>
-        <div class="Material" id="material">
-            <h2>Material</h2>
-            <h3>Artificial Intelligence</h3>
-            <p>Artificial intelligence (AI) is a simulation of human intelligence that is modeled in machines and programmed to think like humans. Meanwhile, according to Mc Leod and Schell, artificial intelligence is the activity of providing machines such as computers with the ability to display behavior that is considered as intelligent as if the ability was displayed by humans.</p>
-        </div>
-        <div class="contact-email">
+        <hr>
+        <div class="contact-email" id="contact">
             <h3>Contact Us</h3>
             <a href="mailto:fauzansyhdan55@gmail.com">fauzansyhdan55@gmail.com</a>
           </div>          
